--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -4,9 +4,8 @@
     flex-direction: row;
     width: 100%;
     height: 68px;
-    padding: 50px;
+    padding-top: 45px;
+    margin-bottom: 50px;
     justify-content: space-between;
     align-items: center;
-    nav {
-    }
 }
