--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,3 +1,8 @@
+.home {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 .catch {
     display: flex;
     justify-content: center;
