--- a/src/components/atoms/card.scss
+++ b/src/components/atoms/card.scss
@@ -1,18 +1,30 @@
 .card {
+    position: relative;
     box-sizing: border-box;
     display: flex;
-    width: 320px;
-    height: 320px;
+    width: 100%;
+    aspect-ratio: 1/1;
     padding: 20px;
     align-items: flex-end;
     border-radius: 10px;
     background-color: rgb(255, 96, 96);
+    overflow: hidden;
+    img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+    }
     p {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
         width: 50%;
         color: #fff;
         font-family: Montserrat;
         font-size: 18px;
         font-style: normal;
         font-weight: 500;
+        z-index: 2;
     }
 }
