--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -4,7 +4,8 @@
     flex-direction: row;
     width: 100%;
     height: 68px;
-    padding-top: 45px;
+    padding: 45px 100px 50px 100px;
+    margin-top: 45px;
     margin-bottom: 50px;
     justify-content: space-between;
     align-items: center;
