--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    flex-shrink: 0;
     width: 100%;
     height: 68px;
     padding: 45px 100px 50px 100px;
