--- a/src/components/organisms/footer.scss
+++ b/src/components/organisms/footer.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
     width: 100%;
     height: 114px;
     padding-top: 66px;
