--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
-body {
+body,
+#root {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,7 +14,7 @@ body {
 #root {
     display: flex;
     flex-direction: column;
-    width: 100%;
+
     justify-content: center;
     align-items: center;
 }
