--- a/src/components/atoms/card.scss
+++ b/src/components/atoms/card.scss
@@ -1,3 +1,4 @@
+@import '../../assets/_variables';
 .card {
     position: relative;
     box-sizing: border-box;
@@ -7,7 +8,7 @@
     padding: 20px;
     align-items: flex-end;
     border-radius: 10px;
-    background-color: rgb(255, 96, 96);
+    background-color: $primary-color;
     overflow: hidden;
     img {
         position: absolute;
