--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -1,25 +1,43 @@
+@import '../../assets/variables';
 .dropdown {
     box-sizing: border-box;
     display: flex;
-    width: 80%;
-    margin: 0 200px;
+    justify-self: center;
+    align-self: center;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0px 20px 10px 15px;
+    background-color: #f6f6f6;
+    border-radius: 5px;
+    font-family: Montserrat;
     h2 {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: 10px 20px 10px 15px;
         width: inherit;
+        padding: 10px 20px 10px 15px;
+        margin: 0;
         border-radius: 5px;
-        background: var(--Red, #ff6060);
+        background: $primary-color;
         color: #fff;
-        font-family: Montserrat;
+
         font-size: 24px;
         font-weight: 500;
         svg {
             height: 32px;
             width: 32px;
         }
+    }
+    .droped {
+        width: inherit;
+        padding: 10px 20px 10px 15px;
+        margin: 0;
+        font-size: 18px;
+        font-weight: 400;
+        color: $primary-color;
     }
 }
