--- a/src/components/organisms/footer.scss
+++ b/src/components/organisms/footer.scss
@@ -1,3 +1,4 @@
+@import '../../assets/variables';
 .footer {
     display: flex;
     flex-direction: column;
@@ -9,7 +10,7 @@
     padding-top: 66px;
     padding-bottom: 29px;
     font-family: 'Montserrat';
-    background-color: black;
+    background-color: $secondary-color;
     color: white;
     img {
         filter: brightness(100);
