--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -1,3 +1,5 @@
+@import '../assets/variables';
+
 .errorpage {
     box-sizing: border-box;
     display: flex;
@@ -5,7 +7,7 @@
     justify-content: stretch;
     align-items: center;
     flex-grow: 1;
-    color: #ff6060;
+    color: $primary-color;
     font-family: Montserrat;
     margin: 0;
     h1 {
@@ -22,7 +24,7 @@
     }
     a {
         display: flex;
-        color: #ff6060;
+        color: $primary-color;
         font-size: 18px;
         font-weight: 500;
         margin-bottom: 139px;
