debut animation collapse

--- a/src/components/organisms/dropdownlistabout.scss
+++ b/src/components/organisms/dropdownlistabout.scss
@@ -1,6 +1,8 @@
 .dropdown__about {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     margin-top: 38px;
 }
