--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -1,30 +1,26 @@
-@import '../../assets/variables';
+@import '../../assets/variables', '../../assets/animations';
 .dropdown {
-    box-sizing: border-box;
     display: flex;
-    justify-self: center;
-    align-self: center;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 70%;
     margin: 0;
     margin-bottom: 30px;
-    padding: 0px 20px 10px 15px;
-    background-color: #f6f6f6;
-    border-radius: 5px;
+    padding: 15px 20px 10px 20px;
+    overflow: hidden;
     font-family: Montserrat;
     h2 {
+        cursor: pointer;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        width: inherit;
+        width: 100%;
         padding: 10px 20px 10px 15px;
         margin: 0;
         border-radius: 5px;
-        background: $primary-color;
+        background-color: $primary-color;
         color: #fff;
-
         font-size: 24px;
         font-weight: 500;
         svg {
@@ -32,12 +28,22 @@
             width: 32px;
         }
     }
-    .droped {
-        width: inherit;
-        padding: 10px 20px 10px 15px;
+    &__content {
+        overflow: hidden;
+        z-index: -1;
+        display: flex;
+        width: 100%;
         margin: 0;
+        padding: 0px;
+        border-radius: 5px;
+        background-color: $main-bg-color;
+        color: $primary-color;
+        font-family: Montserrat;
         font-size: 18px;
         font-weight: 400;
-        color: $primary-color;
+        & > * {
+            padding: 20px;
+            animation:;
+        }
     }
 }
