--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -7,7 +7,7 @@
     width: 70%;
     margin: 0;
     margin-bottom: 30px;
-    padding: 15px 20px 10px 20px;
+
     overflow: hidden;
     font-family: Montserrat;
     h2 {
@@ -29,6 +29,8 @@
         }
     }
     &__content {
+        position: relative;
+        top: -10px;
         overflow: hidden;
         z-index: -1;
         display: flex;
@@ -41,9 +43,27 @@
         font-family: Montserrat;
         font-size: 18px;
         font-weight: 400;
+        transition: max-height 500ms ease-in-out;
+        transform-origin: top;
+        max-height: 0;
         & > * {
             padding: 20px;
-            animation:;
+            transform: translateY(-150px);
+            transition: transform 300ms ease-in-out;
+            transition-delay: 200ms;
         }
+    }
+    .arrow {
+        transition: all 300ms ease-in-out;
+    }
+    .rotate {
+        transform: rotate(-180deg);
+    }
+}
+
+.open {
+    max-height: 300px;
+    p {
+        transform: translateY(0);
     }
 }
