--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -49,12 +49,12 @@
         & > * {
             padding: 20px;
             transform: translateY(-150px);
-            transition: transform 300ms ease-in-out;
+            --webkit-transition: transform 300ms ease-in-out;
             transition-delay: 200ms;
         }
     }
     .arrow {
-        transition: all 300ms ease-in-out;
+        --webkit-transition: all 300ms ease-in-out;
     }
     .rotate {
         transform: rotate(-180deg);
