--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -1,26 +1,28 @@
 @import '../assets/variables';
 
 .errorpage {
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: stretch;
+    justify-content: space-around;
     align-items: center;
     flex-grow: 1;
     color: $primary-color;
     font-family: Montserrat;
     margin: 0;
     h1 {
+        margin: 0;
         display: flex;
         font-size: 288px;
         font-weight: 700;
-        margin-bottom: 139px;
+        margin-top: 100px;
+        margin-bottom: 100px;
     }
     p {
         display: flex;
         font-size: 36px;
         font-weight: 500;
         margin-bottom: 139px;
+        margin-top: 100px;
     }
     a {
         display: flex;
