--- a/src/components/atoms/dropdown-content.scss
+++ b/src/components/atoms/dropdown-content.scss
@@ -14,7 +14,7 @@
     border-radius: 5px;
     background-color: $main-bg-color;
     color: $primary-color;
-    font-family: Montserrat;
+    font-family: $main-font;
     font-size: 18px;
     font-weight: 400;
     transition: max-height 500ms ease-in-out;
