--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -8,7 +8,7 @@
     margin: 0;
     margin-bottom: 30px;
     overflow: hidden;
-    font-family: Montserrat;
+    font-family: $main-font;
     h2 {
         cursor: pointer;
         display: flex;
