--- a/src/components/molecules/banner.scss
+++ b/src/components/molecules/banner.scss
@@ -1,3 +1,5 @@
+@import '../../assets/variables';
+
 .banner {
     box-sizing: border-box;
     display: flex;
@@ -9,12 +11,12 @@
     margin: 0 100px;
     padding: 20px;
     border-radius: 25px;
-    background-color: rgb(0, 0, 0);
+    background-color: $secondary-color;
     background-blend-mode: multiply;
     overflow: hidden;
     h1 {
         color: white;
-        font-family: 'Montserrat';
+        font-family: $main-font;
         font-weight: 500;
         font-size: 48px;
         z-index: 1;
