--- a/src/components/organisms/footer.scss
+++ b/src/components/organisms/footer.scss
@@ -8,7 +8,7 @@
     width: 100%;
     padding-top: 66px;
     padding-bottom: 29px;
-    font-family: 'Montserrat';
+    font-family: $main-font;
     background-color: $secondary-color;
     color: white;
     img {
