--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -7,7 +7,7 @@
     align-items: center;
     flex-grow: 1;
     color: $primary-color;
-    font-family: Montserrat;
+    font-family: $main-font;
     margin: 0;
     h1 {
         margin: 0;
