--- a/src/pages/logements.scss
+++ b/src/pages/logements.scss
@@ -1,28 +1,10 @@
-.logements {
+.logement {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     margin: 0 100px;
-    &__header {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-    }
-    &__notation {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-    }
-}
-.dropdown-section {
-    display: flex;
-    flex-direction: row;
 }
