--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -7,7 +7,11 @@
     justify-content: center;
     align-items: center;
     width: 80%;
+    max-width: 1240px;
+    height: 415px;
+    border-radius: 25px;
     background-color: $main-bg-color;
+    overflow: hidden;
     &__picture {
         display: flex;
         justify-content: center;
@@ -16,15 +20,5 @@
         height: 415px;
         overflow: hidden;
         object-fit: cover;
-    }
-    .rotateLeft {
-        position: absolute;
-        top: 50%;
-        left: 10px;
-    }
-    .rotateRight {
-        position: absolute;
-        top: 50%;
-        right: 10px;
     }
 }
