--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -1,4 +1,4 @@
-@import '../../assets/variables', '../../assets/animations';
+@import '../../assets/variables';
 .dropdown {
     display: flex;
     flex-direction: column;
