--- a/src/assets/_animations.scss
+++ b/src/assets/_animations.scss
@@ -1,1 +1,17 @@
+@keyframes slideIn {
+    0% {
+        left: 200%;
+    }
+    100% {
+        left: 0;
+    }
+}
 
+@keyframes slideOut {
+    0% {
+        left: 0;
+    }
+    100% {
+        left: 200%;
+    }
+}
