--- a/src/components/molecules/cardmenu.scss
+++ b/src/components/molecules/cardmenu.scss
@@ -2,6 +2,7 @@
 
 .cardmenu {
     box-sizing: border-box;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 60px;
