--- a/src/components/molecules/slideshow.scss
+++ b/src/components/molecules/slideshow.scss
@@ -11,8 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        overflow: hidden;
+        width: inherit;
         background-color: $main-bg-color;
     }
     &__picture {
