--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -6,19 +6,22 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    max-width: 1240px;
+    width: 100%;
     height: 415px;
+    margin-bottom: 30px;
     border-radius: 25px;
     background-color: $main-bg-color;
     overflow: hidden;
     &__picture {
         display: flex;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 100%;
         height: 415px;
+        margin-bottom: 30px;
+        border-radius: 25px;
+        background-color: $main-bg-color;
         overflow: hidden;
-        object-fit: cover;
     }
 }
