--- a/src/pages/logements.scss
+++ b/src/pages/logements.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     margin: 0 100px;
