--- a/src/components/organisms/fiche-logement.scss
+++ b/src/components/organisms/fiche-logement.scss
@@ -27,6 +27,7 @@
     &__infos {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         width: 100%;
         margin-bottom: 24px;
     }
