--- a/src/components/molecules/owner-profile.scss
+++ b/src/components/molecules/owner-profile.scss
@@ -24,3 +24,15 @@
         font-weight: 500;
     }
 }
+
+@media only screen and (max-width: 769px) {
+    .owner-profile {
+        img {
+            width: 32px;
+            height: 32px;
+        }
+        p {
+            font-size: 12px;
+        }
+    }
+}
