--- a/src/components/organisms/fiche-logement.scss
+++ b/src/components/organisms/fiche-logement.scss
@@ -3,33 +3,41 @@
 .fiche-logement {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     font-family: $main-font;
     color: $primary-color;
     &__header {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
         width: 100%;
+        margin-bottom: 20px;
+    }
+    &__title {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    &__text {
         margin-bottom: 20px;
         h2 {
             font-size: 36px;
             font-weight: 500;
             line-height: 142.6%;
         }
-        p {
+        > p {
             font-size: 18px;
             font-weight: 500;
         }
     }
     &__infos {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
+        align-items: flex-end;
         width: 100%;
-        margin-bottom: 24px;
     }
 }
 
@@ -41,4 +49,32 @@
     width: 100%;
     height: auto;
     flex-direction: row;
+}
+
+@media only screen and (max-width: 769px) {
+    .fiche-logement {
+        &__header {
+            flex-direction: column;
+        }
+        &__text {
+            h2 {
+                font-size: 18px;
+            }
+            p {
+                font-size: 14px;
+            }
+        }
+        &__infos {
+            align-items: center;
+            flex-direction: row-reverse;
+        }
+    }
+
+    .dropdown-section {
+        flex-direction: column;
+        gap: 0;
+        .dropdown {
+            width: 100%;
+        }
+    }
 }
