--- a/src/assets/_mixin.scss
+++ b/src/assets/_mixin.scss
@@ -3,9 +3,15 @@
 @mixin navlink() {
     color: $primary-color;
     text-align: right;
+    text-wrap: nowrap;
     font-family: $main-font;
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
     margin-left: 57px;
+    @media only screen and (max-width: 769px) {
+        font-size: 12px;
+        text-transform: uppercase;
+        margin-left: 26px;
+    }
 }
