--- a/src/components/atoms/star.scss
+++ b/src/components/atoms/star.scss
@@ -1,11 +1,20 @@
 @import '../../assets/variables';
 
 .star {
-    margin-left: 5px;
+    aspect-ratio: 1/1;
+    width: 36px;
+    margin-left: 20px;
     &--filled {
         color: $primary-color;
     }
     &--greyed {
         filter: saturate(0) brightness(1.8);
+    }
+}
+
+@media only screen and (max-width: 769px) {
+    .star {
+        width: 18px;
+        margin-left: 5px;
     }
 }
