--- a/src/components/molecules/card.scss
+++ b/src/components/molecules/card.scss
@@ -30,3 +30,15 @@
         z-index: 2;
     }
 }
+
+@media only screen and (max-width: 769px) {
+    .card {
+        aspect-ratio: 0;
+        width: 100%;
+        height: 255px;
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+}
