--- a/src/components/molecules/cardmenu.scss
+++ b/src/components/molecules/cardmenu.scss
@@ -7,8 +7,23 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 60px;
     row-gap: 50px;
-    margin: 42px 100px 50px 100px;
+    margin-top: 42px;
+    margin-bottom: 50px;
     padding: 56px;
     background: $main-bg-color;
     border-radius: 25px;
+}
+
+@media only screen and (max-width: 769px) {
+    .cardmenu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        padding: 0;
+        margin-top: 22px;
+        margin-bottom: 27px;
+        row-gap: 20px;
+    }
 }
