--- a/src/components/molecules/dropdown.scss
+++ b/src/components/molecules/dropdown.scss
@@ -3,17 +3,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 70%;
     margin: 0;
     margin-bottom: 30px;
     overflow: hidden;
     font-family: $main-font;
     h2 {
+        box-sizing: border-box;
         cursor: pointer;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         width: 100%;
         padding: 10px 20px 10px 15px;
         margin: 0;
@@ -25,6 +26,15 @@
         svg {
             height: 32px;
             width: 32px;
+        }
+    }
+}
+
+@media only screen and (max-width: 769px) {
+    .dropdown {
+        h2 {
+            font-size: 13px;
+            padding: 0 10px;
         }
     }
 }
