--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -5,3 +5,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 769px) {
+    .home {
+        font-size: 12px;
+    }
+}
