--- a/src/components/atoms/dropdown-content.scss
+++ b/src/components/atoms/dropdown-content.scss
@@ -1,4 +1,5 @@
 @import '../../assets/variables';
+
 .dropdown__content {
     position: relative;
     top: -10px;
@@ -45,7 +46,7 @@
     }
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .dropdown__content {
         font-size: 12px;
     }
