--- a/src/components/atoms/star.scss
+++ b/src/components/atoms/star.scss
@@ -12,7 +12,7 @@
     }
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .star {
         width: 18px;
         margin-left: 5px;
