--- a/src/components/molecules/cardmenu.scss
+++ b/src/components/molecules/cardmenu.scss
@@ -14,7 +14,7 @@
     border-radius: 25px;
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .cardmenu {
         display: flex;
         flex-direction: column;
