--- a/src/components/molecules/owner-profile.scss
+++ b/src/components/molecules/owner-profile.scss
@@ -25,7 +25,7 @@
     }
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .owner-profile {
         img {
             width: 32px;
