--- a/src/components/molecules/slideshow.scss
+++ b/src/components/molecules/slideshow.scss
@@ -20,6 +20,7 @@
         left: calc(50%-width);
         display: flex;
         width: 100%;
+        height: 100%;
         object-fit: cover;
         opacity: 0;
         transition: opacity 500ms ease-in-out;
