--- a/src/components/organisms/dropdownlistabout.scss
+++ b/src/components/organisms/dropdownlistabout.scss
@@ -1,8 +1,15 @@
+@import '../../assets/variables';
+
 .dropdown__about {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    margin-top: 38px;
+    max-width: 1023px;
+    margin: 38px 0;
+    gap: 30px;
+    @media only screen and (max-width: $media-query_mobile) {
+        margin: 19px 0;
+        gap: 20px;
+    }
 }
