--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -1,3 +1,5 @@
+@import '../../assets/variables';
+
 .header {
     box-sizing: border-box;
     display: flex;
@@ -12,7 +14,7 @@
     margin-bottom: 50px;
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .header {
         padding: 0 20px;
         margin: 20px;
