--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,3 +1,5 @@
+@import '../assets/variables';
+
 .home {
     width: 100%;
     display: flex;
@@ -6,7 +8,7 @@
     align-items: center;
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: $media-query_mobile) {
     .home {
         font-size: 12px;
     }
