--- a/src/components/atoms/tag.scss
+++ b/src/components/atoms/tag.scss
@@ -11,6 +11,7 @@
     padding: 0 10px;
     border-radius: 10px;
     margin-right: 10px;
+    margin-bottom: 5px;
     flex-shrink: 0;
     font-size: 14px;
 }
