--- a/src/components/organisms/fiche-logement.scss
+++ b/src/components/organisms/fiche-logement.scss
@@ -68,6 +68,7 @@
         &__infos {
             align-items: center;
             flex-direction: row-reverse;
+            justify-content: space-between;
         }
     }
 
