--- a/src/components/organisms/header.scss
+++ b/src/components/organisms/header.scss
@@ -17,9 +17,9 @@
 @media only screen and (max-width: $media-query_mobile) {
     .header {
         padding: 0 20px;
-        margin: 20px;
+        margin: 20px 0;
         .logo {
-            width: 145px;
+            max-width: 145px;
         }
     }
 }
