--- a/src/components/atoms/link.scss
+++ b/src/components/atoms/link.scss
@@ -1,4 +1,4 @@
-@import '../../assets/variables', '../../assets/mixin';
+@import '../../assets/variables';
 .link {
     color: $primary-color;
     text-align: right;
